stop page jumping with carousel

--- a/src/styles/components/Carousel.css
+++ b/src/styles/components/Carousel.css
@@ -1,4 +1,10 @@
 .carousel.slide img {
-  max-height: 700px;
+  height: 600px;
   object-fit: cover;
+}
+
+@media only screen and (min-width: 1px) and (max-width: 800px) {
+  .carousel.slide img {
+    height: 350px;
+  }
 }
